// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricedOptionRadio component should render PricedOptionRadio with prop image 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "marginBottom": 8,
          "padding": 8,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
        },
        Object {
          "borderColor": "#D0D3D4",
          "borderStyle": "solid",
          "borderWidth": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "uri": "test",
        }
      }
      style={
        Object {
          "height": 80,
          "width": 80,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text>
        test
      </Text>
    </View>
  </View>
</View>
`;

exports[`PricedOptionRadio component should render PricedOptionRadio with required props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "marginBottom": 8,
          "padding": 8,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
        },
        Object {
          "borderColor": "#D0D3D4",
          "borderStyle": "solid",
          "borderWidth": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text>
        test
      </Text>
    </View>
  </View>
</View>
`;

exports[`PricedOptionRadio component should render PricedOptionRadio with with a border 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "marginBottom": 8,
          "padding": 8,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
        },
        Object {
          "borderColor": "#D45D00",
          "borderStyle": "solid",
          "borderWidth": 2,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text>
        test
      </Text>
    </View>
  </View>
</View>
`;
